--- a/VRChat/80/1018080.html
+++ b/VRChat/80/1018080.html
@@ -73,9 +73,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "J4XeazNKILr0KGSjp3NxZlOC4PjwHCaMydSkmtguhws="></script>
+    "rck3EL3H1NXwCILX7ZKdt8cYVNQd7Y6C+I+xx6v2PzU="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ごぶりん","description":"怖くないよ～\nいいゴブリンだよ～！\n\n～ステータス～\n種族：ごぶりん\nLv：1\n階級：1階級(ノーマル)\n称号：なし\n加護：なし\n\nSTR：1\nDEX：2\nVIT：2\nAGI：1\nINT：1\nMND：0\nLUK：1\n\n\n仕様\n1336ポリゴン\nフルトラ非対応\nぷりちぃーでカワエエ\n\nセット内容\n・ユニティパッケージ\n・テクスチャ\n・FDX\n※「まんまるしぇーだー_ver_1.3」が再配布の形で同封されています。\n\n\n\n\n\n\n利用規約\n\n1.本モデルの著作権は製作者に帰属します。\n\n2.改変前また改変後の本モデルの再配布を禁止します。\n\n3.本モデルを使用した一切の損害について製作者は責任を負いません。\n\n4.モデルの政治利用・差別的・侮辱的利用を禁止します。\n\n\n\n※購入した時点で本利用規約に同意したものとします。\n※利用規約が変更した場合は、最新物が適用されます。\n\n\n連絡先 twitter：@hutabosi777","url":"https://booth.pm/ja/items/1018080","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/f03af7d7-31bf-49c1-b051-6718e95e41e0/i/1018080/983e1b5d-d58d-4964-93b4-a32ca19d9b71_base_resized.jpg"}
     </script>
@@ -89,7 +89,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="J4XeazNKILr0KGSjp3NxZlOC4PjwHCaMydSkmtguhws="></script>
+    nonce="rck3EL3H1NXwCILX7ZKdt8cYVNQd7Y6C+I+xx6v2PzU="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -113,6 +113,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -156,7 +158,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1018080/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               158
@@ -171,14 +173,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1018080/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               158
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
