--- a/VRChat/89/1240989.html
+++ b/VRChat/89/1240989.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "hEW02w9SlRie7XYGDi9nMDcwgXOOm+LMGy28s/UaP0U="></script>
+    "ZU1ViXQ1FD5mVEiEWFOWrwyA0WxFGhVdoRfzr8xIwWM="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRchat想定】棒つきキャンディ","description":"【概要】\n棒つきキャンディ、それ以上でも以下でもありません。\n10630ポリゴン\n\n【内容】\nobjファイル、fbxファイル、PNGテクスチャファイル、Readme同梱。有料版には.voxファイルも付けます。\n\n【使用に際して】\n改変等は自由です。むしろあなたの味を見せて下さい。\n再配布は禁止とします。\n\n【その他】\n何かありましたら作者のTwitterまでご連絡願います。\nTwitterID：@mayoi_2_go","url":"https://booth.pm/ja/items/1240989","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/b21016d8-acb0-4bb6-b33d-aa858d853231/i/1240989/2854dc58-3256-47b1-8e7c-2753125996de_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="hEW02w9SlRie7XYGDi9nMDcwgXOOm+LMGy28s/UaP0U="></script>
+    nonce="ZU1ViXQ1FD5mVEiEWFOWrwyA0WxFGhVdoRfzr8xIwWM="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1240989/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               4
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1240989/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               4
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
