--- a/VRChat/81/1240981.html
+++ b/VRChat/81/1240981.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "fPAVOikLBnm1GrrhW08X2ihAbHZPN+ZZCayr7xEI1Rw="></script>
+    "zVzwrIbEapVYWNKA3ExZSQ8fJVYxzHwwi87CDUbVndA="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ELMERR（エルマール）ver1.10【VRC向け３Dアバター】","description":"◆概要\n\nELMERR(エルマール)VER.1.10【VRC向け３Dアバター】\n\n※2019/03/16 素体データを追加しました！\n　内容は最下段\n\n※※注意※※\nVRChat向けセットアップはVRCSDK2.0用のみ同梱されています。\nVRCSDK3.0の対応の予定はありませんのでご了承ください\n\n\nこちらはVRChatでの仕様を想定したHumanoid形式の3Dモデルです。改変用の帽子なし版の髪型、全身メッシュも付属しています。\n\n・リップシンク対応\n・ダイナミックボーン設定済み\n・フルボディトラッキング最低限確認済\n・改変用psd、UV画像同梱\n\n\n制作：さかにゃ\n\n\n\n◆使い方\n\n本モデルのunitypackageをimportする前に、VRChatSDK・Arktoon-Shaders・DynamicBone(任意)をimportしてください。\nシェーダーはArktoon-Shadersを使用させていただいていますが、お好みで変更してください。\n\nfbx・プレハブには改変用の「帽子なし用髪型」が含まれています。不要な場合はアップロード前に削除してください。\n\n\n◆内容\n\n▽テクスチャフォルダ\n└改変用psd各種\n└透過png各種\n└UV展開図各種\n\n▽エルマール.unitypackage\n└エルマール.prefab（VRCSDK・ダイナミックボーン設定済)\n└エルマール.fbx(～48000程度)\n└テクスチャ各種\n└マテリアル各種\n└オリジナル表情手引.txt\n\n▽README.txt\n\n\n◆利用・改変等に関して\n\n本モデルはVRChatでの使用を主な目的として制作しています。\n配信及び映像作品、その他プラットフォームでの利用も自由です。\nテクスチャの変更やモデルの改変等も可能です。\nR18、R18G向け改変の制限はありません。\nゾーニング等利用環境の規則・マナーに則ってご使用ください。\n詳しくは「README.txt」を参照し、それでもわからない場合は問い合わせしてください。\n\n\n◆著作権・制限事項・免責事項などの難しいところ\n\n本データの自作発言、他者への二次配布、パブリック化(ペデスタル・クローン)を禁止します。\n本データで故意に他者に不快感を与える使用、改変を禁止します。\n本データの著作権は、しめさば水産に帰属します。\n本データを使用して発生した、いかなる損害・損失・その他不利益等には、当方は一切の責任を負いません。\n本データの利用をもって各事項に同意したものとします。\n\n\n\n◆更新情報\n\n2019/03/16\nダウンロードファイルにおまけ（エルマールの素体）を追加。\nボーンやメッシュに若干の調整を入れましたが、現行の服ではメッシュが貫通します。あくまでおまけということで。\n\n2019/03/08\nダウンロードファイルにエルマール1.10を追加。1.0の内容を含んでいます。\nunityで改変しやすいようあれこれ調整しました（メッシュとかテクスチャとか）。\nUVに一部変更があります（オプション）。移行の際は気をつけてください。","url":"https://booth.pm/ja/items/1240981","offers":{"priceCurrency":"JPY","@type":"Offer","price":"2500"},"image":"https://booth.pximg.net/c/620x620/35e9b140-14bb-4adb-90ad-592d067cee32/i/1240981/59b2c813-3fdb-4430-bffa-92d1b1ce6d04_base_resized.jpg"}
     </script>
@@ -85,16 +85,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="fPAVOikLBnm1GrrhW08X2ihAbHZPN+ZZCayr7xEI1Rw="></script>
+    nonce="zVzwrIbEapVYWNKA3ExZSQ8fJVYxzHwwi87CDUbVndA="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -118,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -132,7 +131,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -173,7 +173,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1240981/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               70
@@ -188,14 +188,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1240981/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               70
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
