--- a/VRChat/15/1240815.html
+++ b/VRChat/15/1240815.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "T/hCN8OKd5AAgnZffaz27/1pOlMVGDQ4Ax3NY0VaMJI="></script>
+    "SdaTRFvoppYJkMhxwHWUcNur/qJPjbTiUiDgHRe/7Xg="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ギターフック（壁）無料あり","description":"ギターを壁にかけるためのフックのやつです！\nfbx式でUV展開などはしていません。\n少しい大きいので調整お願いします！","url":"https://booth.pm/ja/items/1240815","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/90142dc5-94e2-429c-a719-4db89af8e2cc/i/1240815/b01c951e-44fc-49ba-9ad2-ceb6607df9bd_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="T/hCN8OKd5AAgnZffaz27/1pOlMVGDQ4Ax3NY0VaMJI="></script>
+    nonce="SdaTRFvoppYJkMhxwHWUcNur/qJPjbTiUiDgHRe/7Xg="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1240815/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               10
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1240815/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               10
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
