--- a/VRChat/72/1240572.html
+++ b/VRChat/72/1240572.html
@@ -73,9 +73,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "44gyRdOSSaUh5zTh71+Fq8ARULwq2+9p/oN3uIDtYak="></script>
+    "SOtHjQn8gPx763iiiHTec6pHWHKsZdmYCYl4ohvJXAc="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ノースリーブパーカー1","description":"Vroidstudio制服男性用のテクスチャです。\nバーチャルマーケット2　Void学園のブースにて展示させて\n頂いています。\n\n▼内容物\n・ノースリーブパーカー1.png\n・パンツ1.png\n・靴1.png\n\n▼DLされる前にお読みください\n　（Please refrain from　Use of the person who can't read the following sentences）\n\n・こちらはVroidStadio用のテクスチャです。\n3Dモデルテクスチャ用途以外への利用はしないでください。\n・著作権は放棄しておりません。\n・自分用に改変改造は自由ですが、変更の有無にかかわらず\n配布譲渡はおやめください。\n　（〇動画、VRchatなどへの使用。商用。\n　　×テクスチャを不特定多数がDLできる形でのアップロード）\n・ダウンロード、使用によって何か損害が生じても\nこちらで責任は負いかねます。\n・違法、公序良俗に違反する事への使用はご遠慮願います。\n・R-18な改造などはご遠慮ください。\n・自作発言はお止めください。\n・静止画動画、ライブ配信以外への使用に関しては法人のお客様は一度ご相談ください。\n・こちらの規約https://nogu.booth.pm/も一応目を通してください。\n\n尚、上記の文章は予告なく変更される場合があります。\nEven if you cannot read any part of this terms of use, I consider that I agreed to Terms of Use when you downloaded this data.\nカラーでご相談などありましたら（@nogvr1/Twitter）まで","url":"https://booth.pm/ja/items/1240572","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/981484f4-93cd-43d1-9788-03bb02eb5b4e/i/1240572/33723863-a71e-4e69-8d5d-1b83d6ecfca7_base_resized.jpg"}
     </script>
@@ -83,16 +83,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="44gyRdOSSaUh5zTh71+Fq8ARULwq2+9p/oN3uIDtYak="></script>
+    nonce="SOtHjQn8gPx763iiiHTec6pHWHKsZdmYCYl4ohvJXAc="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -116,6 +113,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -130,7 +129,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -168,7 +168,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1240572/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               346
@@ -183,14 +183,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1240572/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               346
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
